src/libbulletc/src/btSoftBody_wrap.h



	EXPORT btSoftBody_Cluster* btSoftBody_Cluster_new();

	EXPORT btScalar btSoftBody_Cluster_getAdamping(btSoftBody_Cluster* obj);

	EXPORT void btSoftBody_Cluster_getAv(btSoftBody_Cluster* obj);

	EXPORT int btSoftBody_Cluster_getClusterIndex(btSoftBody_Cluster* obj);

	EXPORT bool btSoftBody_Cluster_getCollide(btSoftBody_Cluster* obj);

	EXPORT void btSoftBody_Cluster_getCom(btSoftBody_Cluster* obj);

	EXPORT bool btSoftBody_Cluster_getContainsAnchor(btSoftBody_Cluster* obj);

	EXPORT btScalar* btSoftBody_Cluster_getDimpulses(btSoftBody_Cluster* obj);

	//EXPORT btAlignedObjectArray* btSoftBody_Cluster_getFramerefs(btSoftBody_Cluster* obj);
	EXPORT void btSoftBody_Cluster_getFramexform(btSoftBody_Cluster* obj);

	EXPORT btScalar btSoftBody_Cluster_getIdmass(btSoftBody_Cluster* obj);

	EXPORT btScalar btSoftBody_Cluster_getImass(btSoftBody_Cluster* obj);

	EXPORT void btSoftBody_Cluster_getInvwi(btSoftBody_Cluster* obj);

	EXPORT btScalar btSoftBody_Cluster_getLdamping(btSoftBody_Cluster* obj);

	EXPORT btDbvtNode* btSoftBody_Cluster_getLeaf(btSoftBody_Cluster* obj);

	EXPORT void btSoftBody_Cluster_getLocii(btSoftBody_Cluster* obj);

	EXPORT void btSoftBody_Cluster_getLv(btSoftBody_Cluster* obj);

	//EXPORT btAlignedObjectArray* btSoftBody_Cluster_getMasses(btSoftBody_Cluster* obj);
	EXPORT btScalar btSoftBody_Cluster_getMatching(btSoftBody_Cluster* obj);

	EXPORT btScalar btSoftBody_Cluster_getMaxSelfCollisionImpulse(btSoftBody_Cluster* obj);

	EXPORT btScalar btSoftBody_Cluster_getNdamping(btSoftBody_Cluster* obj);

	EXPORT int btSoftBody_Cluster_getNdimpulses(btSoftBody_Cluster* obj);

	EXPORT void btSoftBody_Cluster_getNodes(btSoftBody_Cluster* obj);

	EXPORT int btSoftBody_Cluster_getNvimpulses(btSoftBody_Cluster* obj);

	EXPORT btScalar btSoftBody_Cluster_getSelfCollisionImpulseFactor(btSoftBody_Cluster* obj);

	EXPORT btScalar* btSoftBody_Cluster_getVimpulses(btSoftBody_Cluster* obj);

	EXPORT void btSoftBody_Cluster_setAdamping(btSoftBody_Cluster* obj, btScalar value);

	//EXPORT void btSoftBody_Cluster_setAv(btSoftBody_Cluster* obj, void value);
	EXPORT void btSoftBody_Cluster_setClusterIndex(btSoftBody_Cluster* obj, int value);

	EXPORT void btSoftBody_Cluster_setCollide(btSoftBody_Cluster* obj, bool value);

	//EXPORT void btSoftBody_Cluster_setCom(btSoftBody_Cluster* obj, void value);
	EXPORT void btSoftBody_Cluster_setContainsAnchor(btSoftBody_Cluster* obj, bool value);

	EXPORT void btSoftBody_Cluster_setDimpulses(btSoftBody_Cluster* obj, btScalar* value);

	//EXPORT void btSoftBody_Cluster_setFramerefs(btSoftBody_Cluster* obj, btAlignedObjectArray* value);
	//EXPORT void btSoftBody_Cluster_setFramexform(btSoftBody_Cluster* obj, void value);
	EXPORT void btSoftBody_Cluster_setIdmass(btSoftBody_Cluster* obj, btScalar value);

	EXPORT void btSoftBody_Cluster_setImass(btSoftBody_Cluster* obj, btScalar value);

	//EXPORT void btSoftBody_Cluster_setInvwi(btSoftBody_Cluster* obj, void value);
	EXPORT void btSoftBody_Cluster_setLdamping(btSoftBody_Cluster* obj, btScalar value);

	EXPORT void btSoftBody_Cluster_setLeaf(btSoftBody_Cluster* obj, btDbvtNode* value);

	//EXPORT void btSoftBody_Cluster_setLocii(btSoftBody_Cluster* obj, void value);
	//EXPORT void btSoftBody_Cluster_setLv(btSoftBody_Cluster* obj, void value);
	//EXPORT void btSoftBody_Cluster_setMasses(btSoftBody_Cluster* obj, btAlignedObjectArray* value);
	EXPORT void btSoftBody_Cluster_setMatching(btSoftBody_Cluster* obj, btScalar value);

	EXPORT void btSoftBody_Cluster_setMaxSelfCollisionImpulse(btSoftBody_Cluster* obj, btScalar value);

	EXPORT void btSoftBody_Cluster_setNdamping(btSoftBody_Cluster* obj, btScalar value);

	EXPORT void btSoftBody_Cluster_setNdimpulses(btSoftBody_Cluster* obj, int value);

	//EXPORT void btSoftBody_Cluster_setNodes(btSoftBody_Cluster* obj, void value);
	EXPORT void btSoftBody_Cluster_setNvimpulses(btSoftBody_Cluster* obj, int value);

	EXPORT void btSoftBody_Cluster_setSelfCollisionImpulseFactor(btSoftBody_Cluster* obj, btScalar value);

	EXPORT void btSoftBody_Cluster_setVimpulses(btSoftBody_Cluster* obj, btScalar* value);

	EXPORT void btSoftBody_Cluster_delete(btSoftBody_Cluster* obj);


	EXPORT btSoftBody_Impulse* btSoftBody_Impulse_new();

	EXPORT int btSoftBody_Impulse_getAsDrift(btSoftBody_Impulse* obj);

	EXPORT int btSoftBody_Impulse_getAsVelocity(btSoftBody_Impulse* obj);

	EXPORT void btSoftBody_Impulse_getDrift(btSoftBody_Impulse* obj);

	EXPORT void btSoftBody_Impulse_getVelocity(btSoftBody_Impulse* obj);

	EXPORT void btSoftBody_Impulse_operator_n(btSoftBody_Impulse* obj);

	EXPORT void btSoftBody_Impulse_operator_m(btSoftBody_Impulse* obj, btScalar x);

	EXPORT void btSoftBody_Impulse_setAsDrift(btSoftBody_Impulse* obj, int value);

	EXPORT void btSoftBody_Impulse_setAsVelocity(btSoftBody_Impulse* obj, int value);

	//EXPORT void btSoftBody_Impulse_setDrift(btSoftBody_Impulse* obj, void value);
	//EXPORT void btSoftBody_Impulse_setVelocity(btSoftBody_Impulse* obj, void value);
	EXPORT void btSoftBody_Impulse_delete(btSoftBody_Impulse* obj);


	EXPORT btSoftBody_Body* btSoftBody_Body_new();

	EXPORT btSoftBody_Body* btSoftBody_Body_new2(btCollisionObject* colObj);